[TASK] Readd BE actions for orders
The way to add actions in the docheader changed
with https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/11.5/Deprecation-95164-ExtbackendBackendTemplateView.html
which needs adaptions.

Fixes also the CSV export.

This also fixes the issue that numbers could
not be generated because `!isset('')` returns
false.

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -391,6 +391,9 @@
             <trans-unit id="tx_cart.controller.order.action.list">
                 <source>List</source>
             </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.close">
+                <source>Close</source>
+            </trans-unit>
             <trans-unit id="tx_cart.controller.order.action.export.csv">
                 <source>Export (CSV)</source>
             </trans-unit>
