[TASK] Allow names in from email addresses
Administrator can set names for the "from"
addresses in TypoScript. Those names will be used
when sending mails after orders to buyer and
seller.

Fixes #301

--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -40,6 +40,9 @@
             <trans-unit id="tx_cart.flexform.cartPageId">
                 <source>Cart Page Id</source>
             </trans-unit>
+            <trans-unit id="tx_cart.flexform.seller.email_from_name">
+                <source>Sender email name for email to the Seller</source>
+            </trans-unit>
             <trans-unit id="tx_cart.flexform.seller.email_from_address">
                 <source>Sender email address for email to the Seller</source>
             </trans-unit>
@@ -57,6 +60,9 @@
             </trans-unit>
             <trans-unit id="tx_cart.flexform.seller.email_bcc_address.description">
                 <source>The recipients of e-mails sent to one or more e-mail addresses separated by commas and listed in the so-called BCC (Blind Carbon Copy) field will receive a copy of the sent e-mail without their address being visible to the other specified recipients. (Source: Wikipedia)</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.flexform.buyer.email_from_name">
+                <source>Sender email name for email to the Buyer</source>
             </trans-unit>
             <trans-unit id="tx_cart.flexform.buyer.email_from_address">
                 <source>Sender email address for email to the Buyer</source>
