--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -4,18 +4,18 @@
         <header/>
         <body>
 
-            <trans-unit id="tcarecords-pages-contains.cart_coupons">
-                <source>Cart: Coupons</source>
+            <trans-unit id="tx_cart.module.main">
+                <source>Shopping Cart</source>
             </trans-unit>
-            <trans-unit id="tcarecords-pages-contains.cart_orders">
-                <source>Cart: Orders</source>
+            <trans-unit id="tx_cart.module.orders">
+                <source>Orders</source>
             </trans-unit>
 
             <trans-unit id="tx_cart.plugin.cart.title">
                 <source>Cart: Cart</source>
             </trans-unit>
             <trans-unit id="tx_cart.plugin.cart.description">
-                <source>shows complete order form</source>
+                <source>Shows complete order form</source>
             </trans-unit>
 
             <trans-unit id="widget_group.cart">
@@ -26,9 +26,6 @@
             </trans-unit>
             <trans-unit id="dashboard.widgets.payment_paid_shipping_open.description">
                 <source>List of Paid but not Shipped Orders</source>
-            </trans-unit>
-            <trans-unit id="dashboard.widgets.orders_per_day.chart.dataSet.0">
-                <source>Total Orders</source>
             </trans-unit>
             <trans-unit id="dashboard.widgets.orders_per_day.title">
                 <source>Orders per Day</source>
