[BUGFIX] Show correct label depending on isNetCart
Setting
`plugin.tx_cart.settings.cart.isNetCart = false`
means that the price of products in the last step
of the multistep checkout are gross prices.
With this bugfix the header of the table shows
"Price per unit (gross)" if needed instead of
always showing "Price per unit (net).

Fixes: #515

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -74,6 +74,9 @@
             <trans-unit id="tx_cart_domain_model_cart_product.price_per_unit_net">
                 <source>Price per unit (net)</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_cart_product.price_per_unit_gross">
+                <source>Price per unit (gross)</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_cart_product.price_subtotal">
                 <source>Subtotal</source>
             </trans-unit>
