--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -75,6 +75,9 @@
                 <source>free</source>
             </trans-unit>
 
+            <trans-unit id="tx_cart_domain_model_order_item">
+                <source>Order</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_item.palettes.numbers">
                 <source>Order and Invoice Number</source>
             </trans-unit>
