[BUGFIX] Use correct label in BE pagination
Replace a copy-paste error and show the correct
label instead in the counter of the pagination
of the BE.

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -591,6 +591,9 @@
             <trans-unit id="tx_cart.backend.filter.end_date">
                 <source>End Date</source>
             </trans-unit>
+            <trans-unit id="tx_cart.backend.pagination.records">
+                <source>Records</source>
+            </trans-unit>
             <trans-unit id="tx_cart.backend.filter.no_results">
                 <source>No results for this filter</source>
             </trans-unit>
