[BUGFIX] Add TCA configuration for field record_type
Relates: #679

--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -260,6 +260,15 @@
             <trans-unit id="tx_cart_domain_model_order_tax.tax_class">
                 <source>Tax Class</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_tax.record_type">
+                <source>Record Type</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_tax.record_type.tax">
+                <source>Tax</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_rax.record_type.total_tax">
+                <source>Total Tax/source>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_order_product">
                 <source>Product</source>
